--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,26 +2,45 @@
 
 .gridContainer {
     display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    grid-auto-rows: 100px; 
+    background-color: midnightblue;
+    color:oldlace;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.gridHeader > h1{
-    display: grid;
-    grid-template-columns: 1, 100%;
+header > h1{
+    grid-column-start: 1; 
+    grid-column-end: 4; 
+    grid-row-start: 1; 
+    grid-row-end: 2; 
     text-align: center;
+
 }
 
-.gridHeader > nav{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+header > nav{
+    grid-column-start: 1; 
+    grid-column-end: 4; 
+    grid-row-start: 2; 
+    grid-row-end: 3; 
 }
 
 button {
     text-decoration: none;
     width: 100%;
     height: 100px;
+    background-color: gray;
+    color:oldlace;
+    font-size: 25px;
+}
+
+a {
+    color: oldlace;
+    text-decoration: none;
 }
 
 .gridSection1 {}
+
 
 .gridSection2 {}
 
@@ -34,8 +53,7 @@ button {
 .gridSection6 {}
 /**/
 
-.gridFooter { 
-    display: grid;
-    grid-template-columns: 1, 100%;
+footer { 
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
