--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,7 +83,6 @@ body{
     .gridSection1 img {
         grid-area: 1A;
         width: 100%;
-        border-radius: 5px;
         border-color: gray;
         border-width: 10px;
         border: solid;
@@ -121,12 +120,15 @@ body{
 
     .gridSection1 #FrontEndTechInfo {
         grid-area: 1B;
-        text-align: justify;
-        padding: 10px;
+        text-align: left;
+        padding: 20px;
+        margin-right: 15px;
     }
 
     .gridSection1 #FrontEndTechInfo h2 {
         text-align: center;
+        padding: 10px;
+        margin-left: 20px;
     }
 
     /* Grid section 1 Portfolio page*/
@@ -134,7 +136,9 @@ body{
     .gridSection1 #projectIconSect1 {
         grid-area: 1A;
         margin: 100px;
-        font-size: 50px;
+        font-size: 100px;
+        padding: 25px;
+        width: 100%;
     }
 
     .gridSection1 #projectA {
@@ -202,12 +206,15 @@ body{
 
     .gridSection2 #BackEndTechInfo h2 {
         text-align: center;
+        padding: 20px;
+        margin-right: 15px;
     }
 
     .gridSection2 #BackEndTechInfo ul li h3{
         grid-area: 2B;
-        text-align: justify;
+        text-align: left;
         padding: 10px;
+        margin-left: 20px;
     }
 
     /* Grid section 2 Portfolio page*/
@@ -281,12 +288,15 @@ body{
 
     .gridSection3 #FrameworkInfo h2 {
         text-align: center;
+        padding: 20px;
+        margin-right: 15px;
     }
 
     .gridSection3 #FrameworkInfo ul li h3{
         grid-area: 3B;
-        text-align: justify;
+        text-align: left;
         padding: 10px;
+        margin-left: 20px;
     }
     /* Grid section 3 Portfolio page*/
 
@@ -339,17 +349,22 @@ body{
     .gridSection4 #otherSkillsIcon i{
         grid-area: 4A;
         margin: 100px;
-        font-size: 50px;
+        font-size: 100px;
+        padding: 25px;
+        width: 100%;
     }
 
     .gridSection4 #otherSkillsInfo h2 {
         text-align: center;
+        padding: 20px;
+        margin-right: 15px;
     }
 
     .gridSection4 #otherSkillsInfo ul li h3{
         grid-area: 4B;
-        text-align: justify;
+        text-align: left;
         padding: 10px;
+        margin-left: 20px;
     }
 
     /* Grid section 4 Portfolio page*/
