--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,7 +53,7 @@ body{
     display: grid;
     width: 100%;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     }
 
     /* Nav buttons */
@@ -75,7 +75,8 @@ body{
         display: block;
         grid-template-columns: 1fr 1fr;
         grid-template-areas: "1A 1B";
-        margin: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 
     /* Grid section 1 About page*/
@@ -160,7 +161,8 @@ body{
         display: block;
         grid-template-columns: 1fr 1fr;
         grid-template-areas: "2A 2B";
-        margin: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
         background-color: gray;
     }
 
@@ -247,8 +249,9 @@ body{
         grid-area: sect3;
         display: block;
         grid-template-columns: 1fr 1fr;
-        grid-template-areas: "3A 3B 3C";
-        margin: 5px;
+        grid-template-areas: "3A 3B";
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 
     /* Grid section 3 About page*/
@@ -264,9 +267,6 @@ body{
         line-height: 25px;
     }
 
-    .gridSection3 li {
-        grid-area: 3C;
-    }
 
     /* Grid section 3 Contact page*/
 
@@ -279,7 +279,7 @@ body{
     }
 
     .gridSection3 #findMe {
-        grid-area: 3B, 3C;
+        grid-area: 3B;
         text-align: center;
         font-size: 25px;
         padding-bottom: 25px;
@@ -314,14 +314,14 @@ body{
     }
 
     .gridSection3 #projectC {
-        grid-area: 3B, 3C;
+        grid-area: 3B;
         text-align: left;
         padding: 20px;
         margin-right: 15px;
     }
 
     .gridSection3 #projectC h2 {
-        grid-area: 3B 3C;
+        grid-area: 3B;
         text-align: center;
         padding: 10px;
         margin-left: 20px;
@@ -334,7 +334,8 @@ body{
         display: block;
         grid-template-columns: 1fr 1fr;
         grid-template-areas: "4A 4B";
-        margin: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
         background-color: gray;
     }
 
@@ -406,7 +407,8 @@ body{
         display: block;
         grid-template-columns: 1fr 1fr;
         grid-template-areas: "5A 5B";
-        margin: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 
     /* Grid section 5 Portfolio page */
@@ -438,7 +440,8 @@ body{
         display: block;
         grid-template-columns: 1fr 1fr;
         grid-template-areas: "6A 6B";
-        margin: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
         background-color: gray;
     }
 
@@ -471,8 +474,6 @@ body{
         color:oldlace;
         font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
-        padding-top: 50px;
-        padding-bottom: 50px;
     }
 }
 
@@ -507,8 +508,7 @@ body{
         color:oldlace;
         font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
-        padding-top: 50px;
-        padding-bottom: 50px;
+
     }
 
     header > nav{
@@ -534,7 +534,7 @@ body{
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-areas: "1A 1B";
-        margin-bottom: 1em;
+        margin-bottom: 10px;
     }
 
     /* Grid section 1 About page*/
@@ -574,12 +574,15 @@ body{
 
     .gridSection1 #FrontEndTechImg img {
         grid-area: 1A;
+        margin-top: 40%;
         width: 100%;
-        height: 100%;
+        height: 50%;
     }
 
     .gridSection1 #FrontEndTechInfo {
         grid-area: 1B;
+        width: 100%;
+        height: 50%;
         text-align: justify;
         padding: 10px;
     }
@@ -613,7 +616,7 @@ body{
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-areas: "2A 2B";
-        margin-bottom: 1em;
+        margin-bottom: 10px;
         background-color: gray;
     }
 
@@ -652,8 +655,9 @@ body{
 
     .gridSection2 #BackEndTechImg img{
         grid-area: 2A;
+        margin-top: 50%;
         width: 100%;
-        height: 100%;
+        height: 50%;
     }
 
     .gridSection2 #BackEndTechInfo h2 {
@@ -662,6 +666,8 @@ body{
 
     .gridSection2 #BackEndTechInfo ul li h3{
         grid-area: 2B;
+        width: 100%;
+        height: 50%;
         text-align: justify;
         padding: 10px;
     }
@@ -689,9 +695,9 @@ body{
     .gridSection3 {
         grid-area: sect3;
         display: grid;
-        grid-template-columns: 1fr 1fr 2fr;
-        grid-template-areas: "3A 3B 3C";
-        margin-bottom: 1em;
+        grid-template-columns: 1fr 3fr;
+        grid-template-areas: "3A 3B";
+        margin-bottom: 10px;
     }
 
     /* Grid section 3 About page*/
@@ -702,14 +708,11 @@ body{
         font-size: 25px;
     }
 
-    .gridSection3 ul {
+    .gridSection3 ul li{
         grid-area: 3B;
         line-height: 25px;
     }
 
-    .gridSection3 li {
-        grid-area: 3C;
-    }
 
     /* Grid section 3 Contact page*/
 
@@ -720,7 +723,8 @@ body{
     }
 
     .gridSection3 #findMe {
-        grid-area: 3B, 3C;
+        grid-area: 3B;
+        overflow-inline: justify;
         text-align: center;
         font-size: 25px;
         padding-top: 50px;
@@ -729,8 +733,9 @@ body{
 
     .gridSection3 #FrameworkImg img{
         grid-area: 3A;
+        margin-top: 50%;
         width: 100%;
-        height: 100%;
+        height: 50%;
     }
 
     .gridSection3 #FrameworkInfo h2 {
@@ -751,13 +756,13 @@ body{
     }
 
     .gridSection3 #projectC {
-        grid-area: 3B, 3C;
+        grid-area: 3B;
         text-align: justify;
         padding: 10px;
     }
 
     .gridSection3 #projectC h2 {
-        grid-area: 3B 3C;
+        grid-area: 3B;
         text-align: center;
     }
 
@@ -768,7 +773,7 @@ body{
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-areas: "4A 4B";
-        margin-bottom: 1em;
+        margin-bottom: 10px;
         background-color: gray;
     }
 
@@ -791,7 +796,7 @@ body{
     .gridSection4 #otherSkillsIcon i{
         grid-area: 4A;
         margin: 100px;
-        font-size: 50px;
+        font-size: 60px;
     }
 
     .gridSection4 #otherSkillsInfo h2 {
@@ -829,7 +834,7 @@ body{
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-areas: "5A 5B";
-        margin-bottom: 1em;
+        margin-bottom: 10px;
     }
 
     /* Grid section 5 Portfolio page */
@@ -857,7 +862,7 @@ body{
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-areas: "6A 6B";
-        margin-bottom: 1em;
+        margin-bottom: 10px;
         background-color: gray;
     }
 
@@ -886,7 +891,5 @@ body{
         color:oldlace;
         font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
-        padding-top: 50px;
-        padding-bottom: 50px;
     }
 }
