--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,12 +16,12 @@ body{
 
 
 /*  Mobile devices */
-@media screen and (min-width: 200px) {
+@media screen and (min-width: 200px) and (max-width: 449px) {
     .gridContainer {
+        overflow: auto;
         min-width: fit-content;
         max-width: max-content;
         display: grid;
-        overflow: auto;
         grid-template-columns: repeat(1, 1fr); 
         grid-auto-rows: minmax(100px, auto);
         grid-template-areas: 
@@ -65,6 +65,19 @@ body{
         background-color: gray;
         color:oldlace;
         font-size: 25px;
+        transition-duration: 0.5;
+        margin: 0px;
+    }
+
+    button:hover {
+        background-color: blue;
+    }
+
+    .navButton {
+        background-color: gray;
+        width: 150px;
+        height: 75px;
+        color: oldlace;
     }
 
 
@@ -525,6 +538,18 @@ body{
         background-color: gray;
         color:oldlace;
         font-size: 25px;
+        transition-duration: 0.5;
+    }
+
+    .navButton {
+        background-color: gray;
+        width: 150px;
+        height: 75px;
+        color: oldlace;
+    }
+
+    button:hover {
+        background-color: blue;
     }
 
     /* Grid section 1 General*/
