--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ body{
         ;
         background-color:midnightblue;
         color: oldlace;
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
     }
 
     /* Header section */
@@ -43,7 +43,7 @@ body{
         width: 100%;
         background-color: midnightblue;
         color:oldlace;
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
         text-align: center;
         padding-top: 50px;
         padding-bottom: 50px;
@@ -52,6 +52,7 @@ body{
     header > nav{
     display: grid;
     width: 100%;
+    font-family: sans-serif,  Georgia, 'Times New Roman', serif;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
     }
@@ -65,6 +66,7 @@ body{
         background-color: gray;
         color:oldlace;
         font-size: 25px;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
         transition-duration: 0.5;
         margin: 0px;
     }
@@ -90,6 +92,7 @@ body{
         grid-template-areas: "1A 1B";
         margin-top: 5px;
         margin-bottom: 5px;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
     }
 
     /* Grid section 1 About page*/
@@ -177,6 +180,7 @@ body{
         margin-top: 5px;
         margin-bottom: 5px;
         background-color: gray;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
     }
 
     /* Grid section 2 About page*/
@@ -265,6 +269,7 @@ body{
         grid-template-areas: "3A 3B";
         margin-top: 5px;
         margin-bottom: 5px;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
     }
 
     /* Grid section 3 About page*/
@@ -350,6 +355,7 @@ body{
         margin-top: 5px;
         margin-bottom: 5px;
         background-color: gray;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
     }
 
     /* Grid section 4 Contact Page*/
@@ -422,6 +428,7 @@ body{
         grid-template-areas: "5A 5B";
         margin-top: 5px;
         margin-bottom: 5px;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
     }
 
     /* Grid section 5 Portfolio page */
@@ -456,6 +463,7 @@ body{
         margin-top: 5px;
         margin-bottom: 5px;
         background-color: gray;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
     }
 
     /* Grid section 6 Portfolio page */
@@ -485,7 +493,7 @@ body{
     footer { 
         background-color: midnightblue;
         color:oldlace;
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: sans-serif,  Georgia, 'Times New Roman', serif;
         text-align: center;
     }
 }
